<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--<TextView
            android:id="@+id/level"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->

        <TextView
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/tipps"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="10dp"
            android:text="@string/bec_hardening"
            android:id="@+id/becomingHarder"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/custom"
            android:text="@string/cust_setts"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/random"
            android:text="Random"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:text="@string/continu"
            android:id="@+id/continu"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:id="@+id/level_buttons"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>